# SnakeRound

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/project/ahsan/language/com/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: helloworld-c.cpp
app/src/main/java/project/ahsan/language/com/myapplication/: Main2Activity.java  MainActivity.java
app/src/main/java/project/ahsan/language/com/myapplication/model/: Point.java
app/src/main/java/project/ahsan/language/com/myapplication/renderer/: CustomRenderer.java
app/src/main/java/project/ahsan/language/com/myapplication/ui/gameplay/: GamePlayActivity.java  PlayController.java
app/src/main/java/project/ahsan/language/com/myapplication/ui/home/: HomeActivity.java
app/src/main/java/project/ahsan/language/com/myapplication/ui/sample/: SampleActivity.java
app/src/main/java/project/ahsan/language/com/myapplication/ui/settings/: SettingsActivity.java
app/src/main/java/project/ahsan/language/com/myapplication/ui/skinchooser/: SkinChooserActivity.java
app/src/main/java/project/ahsan/language/com/myapplication/util/: RawResourceReader.java  ViewUtils.java
app/src/main/java/project/ahsan/language/com/myapplication/utility/: GeometryUtils.java  ViewUtils.java
app/src/main/java/project/ahsan/language/com/myapplication/view/: CustomView.java
app/src/main/res/drawable/: bg_rounder_layout.xml  ic_down.xml  ic_left.xml  ic_right.xml  ic_up.xml
app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_main2.xml  activity_skin_chooser.xml  sample.xml
app/src/main/res/raw/: fragment_shader.glsl  fragment_shader_common.glsl  vertex_shader.glsl  vertex_shader_common.glsl
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: header_preferences.xml
app/src/test/java/project/ahsan/language/com/myapplication/: ExampleUnitTest.java
gamesdk/: RELEASE_NOTES
gamesdk/aar/: aar.aar
gamesdk/samples/bouncyball/app/: CMakeLists.txt  build.gradle
gamesdk/samples/bouncyball/app/src/main/: AndroidManifest.xml
gamesdk/samples/bouncyball/app/src/main/cpp/: Orbit.cpp
(+15 files in other folders)
